--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,8 +4,21 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-body {
-  @apply dark:bg-gray-800;
-  @apply dark:text-gray-200;
+@layer base {
+  html {
+    @apply text-gray-200;
+  }
 }
 
+
+.top-nav:after {
+  content: '  ';
+  background: url('/download.svg') no-repeat right;
+  background-size: contain;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: -1;
+}
